frame-k8s-support/frame-base-support/src/main/resources/yaml/v2-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mvc-service-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mvc-service
        version: v2
    spec:
      containers:
        - name: mvc-service
          image: 192.168.1.181:5000/frame/docker2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8070
