frame-k8s-support/frame-base-support/src/main/resources/yaml/h1-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  labels:
    app: hello-web
spec:
  ports:
    - name: http-web
      port: 8070
  selector:
    app: hello-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-web-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-web
        version: v1
    spec:
      containers:
        - name: hello-web
          image: 192.168.1.181:5000/frame/docker
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8070
---
