frame-k8s-support/frame-base-support/src/main/resources/yaml/h2-deploy-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: wudebao-web
  labels:
    app: wudebao-web
spec:
  ports:
    - name: http-web
      port: 8071
  selector:
    app: wudebao-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: wudebao-web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6d77a461287c770db12d16aef2e2de86a7dd0072f742222302ba7708e1a46794","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: wudebao-web
        version: v1
    spec:
      containers:
        - image: 192.168.1.181:5000/frame/docker3
          imagePullPolicy: IfNotPresent
          name: wudebao-web
          ports:
            - containerPort: 8071
          resources: {}
        - args:
            - proxy
            - sidecar
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --configPath
            - /etc/istio/proxy
            - --binaryPath
            - /usr/local/bin/envoy
            - --serviceCluster
            - wudebao-web.$(POD_NAMESPACE)
            - --drainDuration
            - 45s
            - --parentShutdownDuration
            - 1m0s
            - --discoveryAddress
            - istio-pilot.istio-system:15010
            - --zipkinAddress
            - zipkin.istio-system:9411
            - --connectTimeout
            - 10s
            - --proxyAdminPort
            - "15000"
            - --concurrency
            - "2"
            - --controlPlaneAuthPolicy
            - NONE
            - --statusPort
            - "15020"
            - --applicationPorts
            - "8071"
          image: docker.io/istio/proxyv2:1.1.7
          imagePullPolicy: IfNotPresent
          name: istio-proxy
          ports:
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15020
            initialDelaySeconds: 1
            periodSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 40Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 1337
          volumeMounts:
            - mountPath: /etc/istio/proxy
              name: istio-envoy
            - mountPath: /etc/certs/
              name: istio-certs
              readOnly: true
      volumes:
        - emptyDir:
            medium: Memory
          name: istio-envoy
        - name: istio-certs
          secret:
            optional: true
            secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: wudebao-web
  labels:
    app: wudebao-web
spec:
  ports:
    - name: http-web
      port: 8071
  selector:
    app: wudebao-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: wudebao-web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6d77a461287c770db12d16aef2e2de86a7dd0072f742222302ba7708e1a46794","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: wudebao-web
        version: v1
    spec:
      containers:
        - image: 192.168.1.181:5000/frame/docker3
          imagePullPolicy: IfNotPresent
          name: wudebao-web
          ports:
            - containerPort: 8071
          resources: {}
        - args:
            - proxy
            - sidecar
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --configPath
            - /etc/istio/proxy
            - --binaryPath
            - /usr/local/bin/envoy
            - --serviceCluster
            - wudebao-web.$(POD_NAMESPACE)
            - --drainDuration
            - 45s
            - --parentShutdownDuration
            - 1m0s
            - --discoveryAddress
            - istio-pilot.istio-system:15010
            - --zipkinAddress
            - zipkin.istio-system:9411
            - --connectTimeout
            - 10s
            - --proxyAdminPort
            - "15000"
            - --concurrency
            - "2"
            - --controlPlaneAuthPolicy
            - NONE
            - --statusPort
            - "15020"
            - --applicationPorts
            - "8071"
          image: docker.io/istio/proxyv2:1.1.7
          imagePullPolicy: IfNotPresent
          name: istio-proxy
          ports:
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15020
            initialDelaySeconds: 1
            periodSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 40Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 1337
          volumeMounts:
            - mountPath: /etc/istio/proxy
              name: istio-envoy
            - mountPath: /etc/certs/
              name: istio-certs
              readOnly: true
      volumes:
        - emptyDir:
            medium: Memory
          name: istio-envoy
        - name: istio-certs
          secret:
            optional: true
            secretName: istio.default
status: {}
---
