frame-k8s-support/frame-base-support/src/main/resources/yaml/h2-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: wudebao-web
  labels:
    app: wudebao-web
spec:
  ports:
    - name: http-web
      port: 8071
  selector:
    app: wudebao-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wudebao-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wudebao-web
        version: v1
    spec:
      containers:
        - name: wudebao-web
          image: 192.168.1.181:5000/frame/docker3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8071
