frame-k8s-support/frame-base-support/src/main/resources/yaml/springcloudtest-svr.yaml
apiVersion: v1
kind: Service
metadata:
  name: springcloudtest
spec:
  ports:
    - name: springcloudtest-svr
      port: 8070
      nodePort: 30000
      targetPort: 8070
  selector:
    app: springcloudtest
  type: NodePort
