frame-k8s-support/frame-base-support/src/main/resources/yaml/v1-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mvc-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mvc-service
        version: v1
    spec:
      containers:
        - name: mvc-service
          image: 192.168.1.181:5000/frame/docker
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: mvc-service
  labels:
    app: mvc-service
spec:
  type: NodePort
  ports:
    - port: 8070
      name: http
  selector:
    app: mvc-service
