frame-k8s-support/frame-base-support/src/main/resources/yaml/h1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-web-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.hello-web.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-web
spec:
  hosts:
    - "www.hello-web.com"
  gateways:
    - hello-web-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            port:
              number: 8070
            host: hello-web
