frame-k8s-support/frame-base-support/src/main/resources/yaml/istio-virtservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-gateway
spec:
  hosts:
    - "*"
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: mvc-service
            subset: v2
